update name and minor changes

--- a/NGO-ZHENG_Affixal-rivalry-ed-y.tex
+++ b/NGO-ZHENG_Affixal-rivalry-ed-y.tex
@@ -50,7 +50,7 @@ There are three experiments in this project. To answer the first research questi
     For this experiment, the dataset from Nagano (2022) and a distributional word vectorization system are needed. The idea is to represent the roots of chosen words and their derivations in a vector space so that we can use computation to calculate the similarity. The two affixal processes are seen as semantically comparable if the distributional vectors of the processes are cosine similar. Because cosine similarity is in the range of [-1, 1] with -1 as totally different and 1 as totally similar, we believe that a similarity of around 0.5 would suffice to prove that the two affixal processes are semantically similar. The 76 examples given by Nagano are first converted to vectors by using the Google News 300 pre-trained Word2Vec model. Then the difference vectors are calculated using the roots and their derivations. Finally, the difference vectors of the two affixal processes are averaged, then compared to each other using cosine similarity. If the two affixes are distributionally similar, the difference vectors should be similar as well.
 
 \subsection{Experiment 2:}
-    For the second experiment, we will create a neural network classifier with one hidden layer to train on the Nagano dataset, then use the classifier to predict the derivation of the unseen root words during training. The training data from Nagano is converted into a set of roots and labels. The roots are labeled \emph{0} if having a \emph{ed} derivation, and \emph{1} if \emph{-y}. The roots are then vectorized, then the training data is fed into the classifier. The test dataset is extracted from UniMorph, and the words are filtered to only include words that can have \emph{-ed} or \emph{-y} affixes. The classifier will be trained on the vectorized roots and their derivations from the Nagano dataset, and the classifier will be trained for 100 epochs using 10 folds to maximize learning efficiency due to the limited number of training examples. After training, the classifier will be tested on the UniMorph dataset of 4191 words, which were then vectorized by the word2vec model. The ratio of \emph{-ed} affix is 42.92\%, while the ratio of \emph{-y} affix is 57.08\%. The classifier will be tested on this UniMorph dataset. The hypothesis is if the classifier can predict the derivation of the unseen words with an accuracy of around 50\%, it means that the classifier is not able to distinguish between the two affixes, and therefore there exists an affixal rivalry between the two affixes.
+    For the second experiment, we will create a neural network classifier with one hidden layer to train on the Nagano dataset, then use the classifier to predict the derivation of the unseen root words during training. The training data from Nagano is converted into a set of roots and labels. The roots are labeled \emph{0} if having a \emph{ed} derivation, and \emph{1} if \emph{-y}. The lexemes are then vectorized, then the training data is fed into the classifier. The test dataset is extracted from UniMorph, and the words are filtered to only include words that can have \emph{-ed} or \emph{-y} affixes. The classifier will be trained on the vectorized base lexemes and their derivations from the Nagano dataset, and the classifier will be trained for 100 epochs using 10 folds to maximize learning efficiency due to the limited number of training examples. After training, the classifier will be tested on the UniMorph dataset of 4191 words, which were then vectorized by the word2vec model. The ratio of \emph{-ed} affix is 42.92\%, while the ratio of \emph{-y} affix is 57.08\%. The classifier will be tested on this UniMorph dataset. The hypothesis is if the classifier can predict the derivation of the unseen words with an accuracy of around 50\%, it means that the classifier is not able to distinguish between the two affixes, and therefore there exists an affixal rivalry between the two affixes.
 
 \subsection{Experiment 3:}
     Semantic retrofitting is a method to improve the quality of the word vectors by using the semantic information (synonyms, antonyms, hyper/hyponyms) from a lexicon. 
@@ -63,7 +63,7 @@ There are three experiments in this project. To answer the first research questi
     \subsection{Experiment 1:}
     Using the word2vec model, we first calculate the average similarity between two random words in the lexicon. To do this, we randomly chose 100,000 pairs from the lexicon, and compute the cosine similarity between the pairs. The result of this computation is 0.1308, and this serves as a baseline for the cosine similarity results. 
 
-    The next step is to calculate the average difference vectors between the roots and the derivations of the Nagano dataset. The vectorization model is used on both the roots and the derivations of the words in the Nagano dataset, and then the difference vector is calculated as $\text{difference vector}$ = $\text{root vector}$ - $\text{derivation vector}$. The difference vectors between each root and its two derivations are then compared using cosine similarity, then these values were used to calculate the average similarity between the two affixes \emph{-ed} and \emph{-y}. The result of this computation is 0.4162, which is 3.18 times higher than the baseline. This result shows that the two affixes are distributionally similar, signalling that the two affixes can be semantical rivals. The detailed result of this experiment is shown in Table 1.
+    The next step is to calculate the average difference vectors between the roots and the derivations of the Nagano dataset. The vectorization model is used on both the bases and the derivations of the words in the Nagano dataset, and then the difference vector is calculated as $\text{difference vector}$ = $\text{root vector}$ - $\text{derivation vector}$. The difference vectors between each base lexeme and its two derivations are then compared using cosine similarity, then these values were used to calculate the average similarity between the two affixes \emph{-ed} and \emph{-y}. The result of this computation is 0.4162, which is 3.18 times higher than the baseline. This result shows that the two affixes are distributionally similar, signalling that the two affixes can be semantical rivals. The detailed result of this experiment is shown in Table 1.
 
     \begin{table}[p]
     \begin{center}
@@ -114,7 +114,7 @@ There are three experiments in this project. To answer the first research questi
             
         \end{tabular}
     \end{center}
-    \caption{ Cosine similarity between the roots and their derivations}
+    \caption{ Cosine similarity between the derivations of each base lexeme}
     \end{table}
 
 
@@ -172,7 +172,7 @@ There are three experiments in this project. To answer the first research questi
                 
             \end{tabular}
         \end{center}
-        \caption{Retrofitted and original cosine similarities.}
+        \caption{Retrofitted and original cosine similarities between the derivations of each base lexeme.}
         \end{table}
 \section{Discussion}
     The results of the three experiments show that there exists both distributional and semantic similarity between the two affixes \emph{-ed} and \emph{-y}. However, the accuracy of the second experiment is still much lower than the baseline of predicting the most frequent affix, which is 57.08\%. We looked at this problem from a few other perspectives:
